# itv_ingestion-service

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  start_services.py
.github/: copilot-instructions.md
alembic/: README.md  env.py
alembic/versions/: 001_initial.py  002_add_metadata_ingestion_log.py  003_add_llm_mapping_rules.py
app/: config.py  main.py
app/busqueda/: __init__.py  main.py
app/carga/: __init__.py  main.py
app/db/: connection.py  load_queries.py  log_collector.py  search_queries.py
app/schemas/: location.py  station.py
app/services/: load_service.py
apps/: __init__.py
apps/gateway/: Dockerfile  __init__.py  fanout.py  main.py  schemas.py
apps/normalizer/: Dockerfile  __init__.py  factory.py  schemas.py  worker.py
apps/persister/: Dockerfile  __init__.py  worker.py
core/: __init__.py  config.py
core/database/: __init__.py  queries.py
core/logging/: __init__.py
core/messaging/: __init__.py  consumer.py  rate_limiter.py
docs/: ALEMBIC_GUIDE.md  ALEMBIC_SETUP.md  ARCHITECTURE_MAP.md  CODING_RULES.md  DATA_CONTRACTS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  NORMALIZER_PERFORMANCE_CONTEXT.md  PROJECT_CONTEXT.md  RawIngestionMessage.md  TECH_STACK.md  architecture_decision_records.md  project_context.md
domain/: __init__.py  synthetic_data_generator.py
domain/itv_stations/: __init__.py  mappers.py  models.py  rules.py  schemas.py
extractor_services/catalunya_api/: extractor.py  main.py  requirements.txt  transformer.py
extractor_services/common/: __init__.py  client.py  config.py  duplicate_detector.py  normalizers.py  schemas.py  spanish_locations.py  validators.py
extractor_services/data/: README.md  estaciones_gal.csv
extractor_services/galicia_api/: extractor.py  main.py  requirements.txt  transformer.py
extractor_services/valencia_api/: extractor.py  geocoding.py  main.py  requirements.txt  transformer.py
infra/: docker-compose.apps.yml  docker-compose.infrastructure.yml
infra/postgres/: init.sql
infra/rabbitmq/: definitions.json  rabbitmq.conf
providers/: __init__.py
providers/catalunya_api/: __init__.py
providers/galicia_api/: __init__.py
providers/valencia_api/: __init__.py
scripts/: __init__.py  debug_llm_batch.py  debug_llm_config.py  eval_llm_transformer.py  llm_eval_10s_3sdel.json  llm_eval_10s_withdel.json  llm_eval_10samples.json  llm_eval_3samples_bs3.json  llm_eval_5s_withdel.json  llm_eval_5samples.json  llm_eval_5samples_bs5.json  llm_eval_debug.json  llm_eval_full.json  llm_eval_pilot.json  llm_eval_test.json  load_generator.py  rejected_data_report.py  run_github_models.py  test_e2e_llm_flow.py
tests/: README.md  TEST_REPORT.md  conftest.py  requirements-test.txt  run_tests.sh  test_api_central_ingest.py  test_catalunya_api.py  test_common_schemas.py  test_extract_coords.py  test_galicia_api.py  test_valencia_api.py  test_validation_agricola.py
tests/core/: test_config.py  test_database_queries.py  test_messaging.py
tests/domain/: test_llm_client.py  test_llm_transformer.py  test_llm_transformer_cache.py  test_mappers.py  test_models.py  test_new_validators.py  test_synthetic_data_generator.py  test_transformers_additional.py  test_validation.py
tests/fixtures/: catalunya_sample.xml  galicia_sample.json  valencia_sample.json
tests/gateway/: test_api.py  test_compatibility.py  test_fanout.py  test_main.py  test_monitoring.py  test_monitoring_llm_rules.py  test_stations.py  test_upload.py
tests/normalizer/: test_factory.py  test_worker.py
tests/persister/: test_persister_worker.py
tests/providers/: test_transformers.py
tests/scripts/: test_rejected_data_report.py
(+28 files in other folders)
